Improve the java text block with java15 feature.