@@ -68,9 +68,10 @@ public final class FileSegmentManagedBuffer extends ManagedBuffer {
         channel.position(offset);
         while (buf.remaining() != 0) {
           if (channel.read(buf) == -1) {
-            throw new IOException(String.format("Reached EOF before filling buffer\n" +
-              "offset=%s\nfile=%s\nbuf.remaining=%s",
-              offset, file.getAbsoluteFile(), buf.remaining()));
+            throw new IOException("""
+              Reached EOF before filling buffer
+              offset=%s\nfile=%s\nbuf.remaining=%s
+              """.formatted(offset, file.getAbsoluteFile(), buf.remaining()));
           }
         }
         buf.flip();
